# sypher-stt-macos

./: .gitignore  LICENSE  README.md  build_app.sh  pyproject.toml  run.sh
scripts/: download_model.py
src/sypher_stt/: __init__.py  app.py  audio.py  clipboard.py  config.py  constants.py  hotkeys.py  instance.py  logger.py  settings.py  settings_ui.py  setup_wizard.py  sounds.py  stats.py  transcriber.py  tray.py  utils.py
