[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sypher-stt"
version = "1.0.7"
description = "Voice-to-text dictation for macOS. Hold a hotkey, speak, paste. Fully offline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.7",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "rumps>=0.4.0",
    "pyobjc-framework-WebKit>=11.0",
]

[project.optional-dependencies]
download = ["huggingface-hub>=0.21.0"]

[project.scripts]
sypher-stt = "sypher_stt.app:main"

[project.urls]
Homepage = "https://github.com/latenighthackathon/sypher-stt-macos"
Repository = "https://github.com/latenighthackathon/sypher-stt-macos"

[tool.setuptools.packages.find]
where = ["src"]
