[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sypher-stt"
version = "1.1.0"
description = "SypherSTT is a privacy-first, push-to-talk voice dictation for macOS. Hold a key, speak, release — transcribed text is pasted instantly. Fully offline and private: transcription runs locally via Faster Whisper, with no API calls, no cloud services, and no audio ever leaving your machine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.7",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "rumps>=0.4.0",
    "pyobjc-framework-WebKit>=11.0",
]

[project.optional-dependencies]
download = ["huggingface-hub>=0.21.0"]

[project.scripts]
sypher-stt = "sypher_stt.app:main"

[project.urls]
Homepage = "https://github.com/latenighthackathon/sypher-stt-macos"
Repository = "https://github.com/latenighthackathon/sypher-stt-macos"

[tool.setuptools.packages.find]
where = ["src"]
